change the classname for logo to avoid overlap/duplication

--- a/src/routes/WelcomePage/WelcomeNavBar.scss
+++ b/src/routes/WelcomePage/WelcomeNavBar.scss
@@ -45,18 +45,18 @@ nav a:hover {
     font-size: 1.8rem;
 }
 
-.logo {
+.welcome-navbar-logo {
     display: flex;
     flex-direction: column;
 }
 
 
-.logo img {
+.welcome-navbar-logo img {
     width: 2rem;
     align-self: center;
 }
 
-.logo h2 {
+.welcome-navbar-logo h2 {
     font-size: 1rem;
 }
 
